--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
       ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 3px; }
       ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
     </style>
-  <script type="importmap">
+    <script>
+      // Polyfill for process.env to prevent ReferenceError in browser-only environments
+      if (typeof process === 'undefined') {
+        window.process = {
+          env: {
+            API_KEY: '' // This will be populated by the build tool or environment
+          }
+        };
+      }
+    </script>
+    <script type="importmap">
 {
   "imports": {
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
@@ -23,12 +33,15 @@
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.39.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
+    "react": "https://esm.sh/react@^19.2.3",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
   <body class="bg-gray-50 text-slate-800">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
