--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
     </style>
     <script>
       // Polyfill for process.env to prevent ReferenceError in browser-only environments
+      // This ensures the app doesn't crash if process.env is accessed directly before Vite replaces it
       if (typeof process === 'undefined') {
         window.process = {
           env: {
-            API_KEY: '' // This will be populated by the build tool or environment
+            API_KEY: '' 
           }
         };
       }
     </script>
-    <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
-    "idb": "https://esm.sh/idb@^8.0.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.39.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
+    "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "idb": "https://esm.sh/idb@^8.0.3"
   }
 }
 </script>
