--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     </style>
     <script>
       // Polyfill for process.env to prevent ReferenceError in browser-only environments
-      // This ensures the app doesn't crash if process.env is accessed directly before Vite replaces it
       if (typeof process === 'undefined') {
         window.process = {
           env: {
@@ -28,14 +27,14 @@
 <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
     "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "idb": "https://esm.sh/idb@^8.0.3",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "idb": "https://esm.sh/idb@^8.0.3"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
