--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,7 +20,9 @@
       if (typeof process === 'undefined') {
         window.process = {
           env: {
-            API_KEY: '' 
+            API_KEY: '',
+            SUPABASE_URL: '',
+            SUPABASE_KEY: ''
           }
         };
       }
@@ -34,7 +37,8 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "idb": "https://esm.sh/idb@^8.0.3",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.90.1"
   }
 }
 </script>
