feat: Improve Supabase integration and print styling
Update `index.html` to include Supabase URL and Key, and add a polyfill for `process.env`.
In `App.tsx`, introduce `isCloudConnected` state and check DB service configuration on load.
Enhance `ReceiptModal.tsx` and `DailyAnalysis.tsx` with more robust print styling to ensure correct rendering on thermal printers.
Modify `db.ts` to refine `isConfigured` check and log subscription status for better debugging.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       if (typeof process === 'undefined') {
         window.process = {
           env: {
-            API_KEY: '',
-            SUPABASE_URL: '',
-            SUPABASE_KEY: ''
+            API_KEY: '', // API Key should be set in environment or here if needed
+            SUPABASE_URL: 'https://peugomttfkbawdnwdhis.supabase.co',
+            SUPABASE_KEY: 'sb_publishable_NBY5lR6y__SoqsUHtlA1gQ_JcbmG299'
           }
         };
       }
