--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,25 +17,54 @@
           globalThis.process = window.process;
         }
       })();
+
+      // Global error tracker to show on screen if JS crashes before React mounts
+      window.onerror = function(msg, url, lineNo, columnNo, error) {
+        const root = document.getElementById('root');
+        if (root) {
+          root.innerHTML = `
+            <div style="padding: 2rem; font-family: system-ui; text-align: center; color: #ef4444;">
+              <h1 style="font-size: 1.5rem; font-weight: bold; margin-bottom: 1rem;">Application Startup Error</h1>
+              <p style="color: #64748b; margin-bottom: 2rem;">A script failed to load or crashed during startup.</p>
+              <div style="background: #f8fafc; padding: 1rem; border-radius: 0.75rem; font-family: monospace; font-size: 0.75rem; text-align: left; overflow-x: auto; border: 1px solid #e2e8f0;">
+                ${msg}<br>at ${url}:${lineNo}:${columnNo}
+              </div>
+              <button onclick="window.location.reload()" style="margin-top: 2rem; background: #2563eb; color: white; border: none; padding: 0.75rem 1.5rem; border-radius: 0.5rem; font-weight: bold; cursor: pointer;">Retry Loading</button>
+            </div>
+          `;
+        }
+        return false;
+      };
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
-      body { font-family: 'Inter', sans-serif; }
+      body { font-family: 'Inter', sans-serif; margin: 0; }
       ::-webkit-scrollbar { width: 6px; height: 6px; }
       ::-webkit-scrollbar-track { background: transparent; }
       ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 3px; }
       ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
+      #root:empty::before {
+        content: "Starting Application...";
+        position: fixed;
+        inset: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 600;
+        color: #64748b;
+        background: #f8fafc;
+      }
     </style>
     <script type="importmap">
 {
   "imports": {
-    "html2canvas": "https://esm.sh/html2canvas@1.4.1",
-    "jszip": "https://esm.sh/jszip@3.10.1",
-    "lucide-react": "https://esm.sh/lucide-react@0.473.0",
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.473.0",
+    "html2canvas": "https://esm.sh/html2canvas@1.4.1",
+    "jszip": "https://esm.sh/jszip@3.10.1",
     "@google/genai": "https://esm.sh/@google/genai@1.3.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.47.10",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
@@ -46,7 +74,7 @@
   }
 }
 </script>
-</head>
+  </head>
   <body class="bg-gray-50 text-slate-800">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
