--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SmartPOS</title>
+    <title>SmartPOS - Walk-in Billing</title>
     <script>
-      // Immediate Polyfill for process.env - Must run before modules
+      // Immediate Polyfill for process.env
       (function() {
         const env = {
           API_KEY: '',
@@ -74,6 +74,7 @@
     "lucide-react": "https://esm.sh/lucide-react@0.474.0",
     "html2canvas": "https://esm.sh/html2canvas@1.4.1",
     "jszip": "https://esm.sh/jszip@3.10.1",
+    "xlsx": "https://esm.sh/xlsx@0.18.5",
     "@google/genai": "https://esm.sh/@google/genai@1.3.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.47.10",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
